Done adding JDBC to capstone project, also done exercises in markdown files